<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent">

    <TextView
        android:id="@+id/beers_tv_sort"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/sort"
        android:textSize="14sp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="16dp"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <Spinner
        android:id="@+id/beers_sp_sort"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:entries="@array/sortBy"
        android:prompt="@string/sort"
        app:layout_constraintBaseline_toBaselineOf="@+id/beers_tv_sort"
        app:layout_constraintRight_toLeftOf="@+id/beers_switch_sort"
        tools:layout_constraintRight_creator="1"
        android:layout_marginEnd="16dp"/>

    <Switch
        android:id="@+id/beers_switch_sort"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        android:fontFamily="sans-serif-medium"
        android:text="@string/ascending"
        android:textSize="14sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/beers_sp_sort"
        tools:layout_constraintRight_creator="1"
        android:layout_marginEnd="24dp"
        app:layout_constraintRight_toRightOf="parent"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/beers_rv_list"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/beers_sp_sort"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintBottom_creator="1"/>

    <ProgressBar
        android:id="@+id/beers_pb_loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1"/>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/beers_fab_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:clickable="true"
        app:fabSize="mini"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.9"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.9"
        app:srcCompat="@android:drawable/ic_input_add"/>
</android.support.constraint.ConstraintLayout>