...
    <string name="Country">Country</string>

    <string name="sort">Sort by:</string>
    <string name="ascending">Ascending</string>
    <string name="register">Register</string>
    <string name="fb_storage_addr">gs://beers-541d0.appspot.com</string>
    <string name="country">country</string>
    <string name="rating">rating</string>
    <string name="name">name</string>
    <string name="style">Style</string>
    <string name="Rating">Rating</string>

    <string-array name="sortBy">
        <item>@string/rating</item>
        <item>@string/country</item>
...
