...
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_et_name"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"/>

    <EditText
        android:id="@+id/add_et_country"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_rect"
        android:ems="10"
        android:inputType="textMultiLine"
        android:padding="8dp"
...
